[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/SaveIcon.png" type="Texture" id=1]
[ext_resource path="res://assets/Backpack.png" type="Texture" id=2]
[ext_resource path="res://Player/HealthUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UserInterface.gd" type="Script" id=5]
[ext_resource path="res://Player/Inventory/Inventory.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/HelpButton.png" type="Texture" id=7]
[ext_resource path="res://Player/HelpScreen.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Inventory" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 32, 16 )
scale = Vector2( 0.8, 0.8 )

[node name="HelpScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="BackpackButton" type="Button" parent="."]
margin_left = 436.0
margin_right = 480.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 2 )
flat = true

[node name="SaveButton" type="Button" parent="."]
margin_left = 400.0
margin_top = 4.0
margin_right = 433.0
margin_bottom = 36.0
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="HelpButton" type="Button" parent="."]
margin_left = 366.0
margin_top = 3.0
margin_right = 398.0
margin_bottom = 35.0
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="HealthUI" parent="." instance=ExtResource( 3 )]

[node name="DeathScreen" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="BackpackButton" to="." method="_on_BackpackButton_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
